--- a/TPU/TPU_G38/src/main/resources/Interfaz/principal.fxml
+++ b/TPU/TPU_G38/src/main/resources/Interfaz/principal.fxml
@@ -2,17 +2,26 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="348.0" prefWidth="589.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interfaz.PrincipalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="523.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interfaz.PrincipalController">
     <children>
-        <Button fx:id="btnCambiar" layoutX="511.0" layoutY="26.0" mnemonicParsing="false" onAction="#cambiarUbicacion" text="Cambiar..." />
-        <Label fx:id="lblUbicacion" layoutX="106.0" layoutY="30.0" text="C:\Users\Usuario\Desktop\FRC\Sistemas III\TSB\TPU\120819-054029">
+        <Button fx:id="btnCambiar" layoutX="576.0" layoutY="26.0" mnemonicParsing="false" onAction="#cambiarUbicacion" text="Cambiar..." />
+        <Label fx:id="lblUbicacion" layoutX="106.0" layoutY="30.0" prefHeight="17.0" prefWidth="455.0">
             <font>
                 <Font name="System Bold" size="12.0" />
             </font></Label>
         <Label layoutX="14.0" layoutY="30.0" text="Origen de datos: " />
         <Button fx:id="btnCargar" layoutX="14.0" layoutY="58.0" mnemonicParsing="false" onAction="#cargarDatos" text="Cargar datos" />
-        <TextArea fx:id="txtAgrupaciones" layoutX="22.0" layoutY="99.0" prefHeight="230.0" prefWidth="548.0" />
+      <ListView fx:id="lvwResultados" layoutX="23.0" layoutY="228.0" prefHeight="272.0" prefWidth="621.0" />
+      <Label layoutX="24.0" layoutY="199.0" text="Resultados: " />
+      <Line endX="559.0" layoutX="104.0" layoutY="105.0" startX="-100.0" />
+      <Label layoutX="22.0" layoutY="119.0" text="Distrito:" />
+      <ComboBox fx:id="cboDistritos" layoutX="86.0" layoutY="115.0" onAction="#filtrarSecciones" prefHeight="25.0" prefWidth="216.0" />
+      <Label layoutX="22.0" layoutY="154.0" text="Sección:" />
+      <ComboBox fx:id="cboSecciones" layoutX="86.0" layoutY="150.0" onAction="#filtrarCircuitos" prefHeight="25.0" prefWidth="216.0" />
+      <Label layoutX="333.0" layoutY="119.0" text="Circuito: " />
+      <ComboBox fx:id="cboCircuito" layoutX="397.0" layoutY="115.0" prefHeight="25.0" prefWidth="216.0" />
     </children>
 </AnchorPane>
